k8s-prod/client-deployment.yaml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      # wait for server-cluster-ip-service to run first
      containers:
        - name: client
          image: hamzazahid/multi-client
          ports:
            - containerPort: 3000
